--- a/part-3-implicit-feedback-recommender.ipynb
+++ b/part-3-implicit-feedback-recommender.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,17 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings = pd.read_csv(\"https://s3-us-west-2.amazonaws.com/recommender-tutorial/ratings.csv\")\n",
-    "movies = pd.read_csv(\"https://s3-us-west-2.amazonaws.com/recommender-tutorial/movies.csv\")"
+    "ratings = pd.read_csv(\"./data/ratings.csv\")\n",
+    "#ratings = pd.read_csv(\"https://s3-us-west-2.amazonaws.com/recommender-tutorial/ratings.csv\")\n",
+    "movies = pd.read_csv(\"./data/movies.csv\")\n",
+    "#movies = pd.read_csv(\"https://s3-us-west-2.amazonaws.com/recommender-tutorial/movies.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +160,7 @@
        "4       1       50     5.0  964982931"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,9 +260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Vi Le\\AppData\\Roaming\\Python\\Python312\\site-packages\\fuzzywuzzy\\fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
+     ]
+    }
+   ],
    "source": [
     "from fuzzywuzzy import process\n",
     "\n",
@@ -293,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +313,7 @@
        "3282"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +340,7 @@
        "'Legally Blonde (2001)'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,14 +388,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:OpenBLAS detected. Its highly recommend to set the environment variable 'export OPENBLAS_NUM_THREADS=1' to disable its internal multithreading\n"
+      "C:\\Program Files\\Python312\\Lib\\site-packages\\implicit\\cpu\\als.py:95: RuntimeWarning: OpenBLAS is configured to use 8 threads. It is highly recommended to disable its internal threadpool by setting the environment variable 'OPENBLAS_NUM_THREADS=1' or by calling 'threadpoolctl.threadpool_limits(1, \"blas\")'. Having OpenBLAS use a threadpool can lead to severe performance issues here.\n",
+      "  check_blas_config()\n"
      ]
     }
    ],
@@ -408,15 +420,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15.0/15 [00:06<00:00,  2.30it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a8c855b0e6104943902f3b236f73de7b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/15 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -432,25 +451,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(314, 0.9999999),\n",
-       " (277, 0.87162775),\n",
-       " (510, 0.8275397),\n",
-       " (257, 0.82705915),\n",
-       " (97, 0.7511661),\n",
-       " (461, 0.7223397),\n",
-       " (418, 0.6889433),\n",
-       " (1938, 0.6659612),\n",
-       " (123, 0.6441393),\n",
-       " (43, 0.61916924)]"
+       "(array([314, 187, 284, 126, 167, 308, 553,  28,  26, 420], dtype=int32),\n",
+       " array([1.        , 0.6029129 , 0.5574544 , 0.5471881 , 0.51261616,\n",
+       "        0.49235755, 0.47688517, 0.46786225, 0.4660756 , 0.43404853],\n",
+       "       dtype=float32))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -480,15 +493,7 @@
      "output_type": "stream",
      "text": [
       "Because you watched Forrest Gump (1994)...\n",
-      "Shawshank Redemption, The (1994)\n",
-      "Silence of the Lambs, The (1991)\n",
-      "Pulp Fiction (1994)\n",
-      "Braveheart (1995)\n",
-      "Schindler's List (1993)\n",
-      "Jurassic Park (1993)\n",
-      "Matrix, The (1999)\n",
-      "Apollo 13 (1995)\n",
-      "Seven (a.k.a. Se7en) (1995)\n"
+      "Jumanji (1995)\n"
      ]
     }
    ],
@@ -518,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -586,44 +591,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
+       "      <th>3</th>\n",
        "      <td>95</td>\n",
-       "      <td>1089</td>\n",
+       "      <td>29</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1048382826</td>\n",
-       "      <td>Reservoir Dogs (1992)</td>\n",
+       "      <td>1043340522</td>\n",
+       "      <td>City of Lost Children, The (Cité des enfants p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
+       "      <th>2</th>\n",
        "      <td>95</td>\n",
-       "      <td>1221</td>\n",
+       "      <td>25</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1043340018</td>\n",
-       "      <td>Godfather: Part II, The (1974)</td>\n",
+       "      <td>1044744590</td>\n",
+       "      <td>Leaving Las Vegas (1995)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>83</th>\n",
+       "      <th>22</th>\n",
        "      <td>95</td>\n",
-       "      <td>3019</td>\n",
+       "      <td>1036</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1043340112</td>\n",
-       "      <td>Drugstore Cowboy (1989)</td>\n",
+       "      <td>1043339248</td>\n",
+       "      <td>Die Hard (1988)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
+       "      <th>20</th>\n",
        "      <td>95</td>\n",
-       "      <td>1175</td>\n",
+       "      <td>924</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1105400882</td>\n",
-       "      <td>Delicatessen (1991)</td>\n",
+       "      <td>1043340392</td>\n",
+       "      <td>2001: A Space Odyssey (1968)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>18</th>\n",
        "      <td>95</td>\n",
-       "      <td>1196</td>\n",
+       "      <td>741</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1043340018</td>\n",
-       "      <td>Star Wars: Episode V - The Empire Strikes Back...</td>\n",
+       "      <td>1043340485</td>\n",
+       "      <td>Ghost in the Shell (Kôkaku kidôtai) (1995)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -631,21 +636,21 @@
       ],
       "text/plain": [
        "    userId  movieId  rating   timestamp  \\\n",
-       "24      95     1089     5.0  1048382826   \n",
-       "34      95     1221     5.0  1043340018   \n",
-       "83      95     3019     5.0  1043340112   \n",
-       "26      95     1175     5.0  1105400882   \n",
-       "27      95     1196     5.0  1043340018   \n",
+       "3       95       29     5.0  1043340522   \n",
+       "2       95       25     5.0  1044744590   \n",
+       "22      95     1036     5.0  1043339248   \n",
+       "20      95      924     5.0  1043340392   \n",
+       "18      95      741     5.0  1043340485   \n",
        "\n",
        "                                                title  \n",
-       "24                              Reservoir Dogs (1992)  \n",
-       "34                     Godfather: Part II, The (1974)  \n",
-       "83                            Drugstore Cowboy (1989)  \n",
-       "26                                Delicatessen (1991)  \n",
-       "27  Star Wars: Episode V - The Empire Strikes Back...  "
+       "3   City of Lost Children, The (Cité des enfants p...  \n",
+       "2                            Leaving Las Vegas (1995)  \n",
+       "22                                    Die Hard (1988)  \n",
+       "20                       2001: A Space Odyssey (1968)  \n",
+       "18         Ghost in the Shell (Kôkaku kidôtai) (1995)  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -699,12 +704,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
+       "      <th>82</th>\n",
        "      <td>95</td>\n",
-       "      <td>3690</td>\n",
+       "      <td>2990</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1043339283</td>\n",
+       "      <td>Licence to Kill (1989)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>95</td>\n",
+       "      <td>1381</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1043339908</td>\n",
-       "      <td>Porky's Revenge (1985)</td>\n",
+       "      <td>Grease 2 (1982)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>122</th>\n",
@@ -715,12 +728,12 @@
        "      <td>National Lampoon's Van Wilder (2002)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
+       "      <th>109</th>\n",
        "      <td>95</td>\n",
-       "      <td>4015</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1043339957</td>\n",
-       "      <td>Dude, Where's My Car? (2000)</td>\n",
+       "      <td>4732</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1043339283</td>\n",
+       "      <td>Bubble Boy (2001)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>164</th>\n",
@@ -730,28 +743,20 @@
        "      <td>1105401093</td>\n",
        "      <td>Hellboy (2004)</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109</th>\n",
-       "      <td>95</td>\n",
-       "      <td>4732</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1043339283</td>\n",
-       "      <td>Bubble Boy (2001)</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "     userId  movieId  rating   timestamp                                 title\n",
-       "93       95     3690     2.0  1043339908                Porky's Revenge (1985)\n",
+       "82       95     2990     2.0  1043339283                Licence to Kill (1989)\n",
+       "43       95     1381     2.0  1043339908                       Grease 2 (1982)\n",
        "122      95     5283     2.0  1043339957  National Lampoon's Van Wilder (2002)\n",
-       "100      95     4015     2.0  1043339957          Dude, Where's My Car? (2000)\n",
-       "164      95     7373     1.0  1105401093                        Hellboy (2004)\n",
-       "109      95     4732     1.0  1043339283                     Bubble Boy (2001)"
+       "109      95     4732     1.0  1043339283                     Bubble Boy (2001)\n",
+       "164      95     7373     1.0  1105401093                        Hellboy (2004)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,34 +777,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(855, 1.127779),\n",
-       " (1043, 0.98673713),\n",
-       " (1210, 0.9256185),\n",
-       " (3633, 0.90900886),\n",
-       " (1978, 0.8929481),\n",
-       " (4155, 0.84075284),\n",
-       " (2979, 0.82858247),\n",
-       " (3609, 0.78015),\n",
-       " (4791, 0.7672245),\n",
-       " (4010, 0.7530525)]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "user_items must contain 1 row for every user in userids",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m X_t \u001b[38;5;241m=\u001b[39m X\u001b[38;5;241m.\u001b[39mT\u001b[38;5;241m.\u001b[39mtocsr()\n\u001b[0;32m      3\u001b[0m user_idx \u001b[38;5;241m=\u001b[39m user_mapper[user_id]\n\u001b[1;32m----> 4\u001b[0m recommendations \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrecommend\u001b[49m\u001b[43m(\u001b[49m\u001b[43muser_idx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_t\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m recommendations\n",
+      "File \u001b[1;32mC:\\Program Files\\Python312\\Lib\\site-packages\\implicit\\cpu\\matrix_factorization_base.py:49\u001b[0m, in \u001b[0;36mMatrixFactorizationBase.recommend\u001b[1;34m(self, userid, user_items, N, filter_already_liked_items, filter_items, recalculate_user, items)\u001b[0m\n\u001b[0;32m     47\u001b[0m     user_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39misscalar(userid) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(userid)\n\u001b[0;32m     48\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m user_items\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m user_count:\n\u001b[1;32m---> 49\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muser_items must contain 1 row for every user in userids\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     51\u001b[0m user \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_user_factor(userid, user_items, recalculate_user)\n\u001b[0;32m     53\u001b[0m item_factors \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mitem_factors\n",
+      "\u001b[1;31mValueError\u001b[0m: user_items must contain 1 row for every user in userids"
+     ]
     }
    ],
    "source": [
-    "X_t = X.T.tocsr()\n",
+    "#X_t = X.T.tocsr()\n",
+    "X_csr = X.tocsr().T\n",
     "\n",
     "user_idx = user_mapper[user_id]\n",
-    "recommendations = model.recommend(user_idx, X_t)\n",
+    "recommendations = model.recommend(user_idx, X_csr)\n",
     "recommendations"
    ]
   },
@@ -812,26 +811,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Abyss, The (1989)\n",
-      "Star Trek: First Contact (1996)\n",
-      "Hunt for Red October, The (1990)\n",
-      "Lord of the Rings: The Fellowship of the Ring, The (2001)\n",
-      "Star Wars: Episode I - The Phantom Menace (1999)\n",
-      "Chicago (2002)\n",
-      "Crouching Tiger, Hidden Dragon (Wo hu cang long) (2000)\n",
-      "Ocean's Eleven (2001)\n",
-      "Lord of the Rings: The Return of the King, The (2003)\n",
-      "Punch-Drunk Love (2002)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for r in recommendations:\n",
     "    recommended_title = get_movie_title(r[0])\n",
@@ -848,7 +830,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -862,7 +844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
